# shadowsocks-cpp

./: .gitignore  CMakeLists.txt  README.md  install.py
libs/: cmdline.hpp
src/: asyncdns.cpp  asyncdns.hpp  common.cpp  common.hpp  cryptor.cpp  daemon.cpp  daemon.hpp  easy_socket.cpp  easy_socket.hpp  eventloop.cpp  main.cpp  manager.hpp  server.cpp  server.hpp  shell.cpp  shell.hpp  tcprelay.cpp  tcprelay.hpp  udprelay.cpp  udprelay.hpp
src/crypto/: aead.cpp  aead.hpp  openssl.cpp  openssl.hpp  sodium.cpp
test/asyncdns/: CMakeLists.txt
test/asyncdns/depend/: common.cpp  easy_socket.cpp  easylogging++.cpp  easylogging++.hpp  eventloop.cpp  eventloop.hpp  lru_cache.hpp
test/asyncdns/test/: asyncdns.cpp  asyncdns.hpp  main.cpp
test/common/: CMakeLists.txt
test/common/depend/: easylogging++.hpp
test/common/test/: main.cpp
test/crypto/: CMakeLists.txt
test/crypto/depend/: common.cpp
test/crypto/test/: aead.cpp  aead.hpp  cryptor.cpp  cryptor.hpp  main.cpp  openssl.cpp  sodium.cpp  sodium.hpp
test/lru_cache/: CMakeLists.txt
test/lru_cache/test/: main.cpp
